# MaaKEDR

./: .gitignore  .npmrc  .prettierignore  .prettierrc.mjs  AGENTS.md  CLAUDE.md  CONTACT  CONTRIBUTING.md  README.en.md  README.md  interface.json  maa-project.json  maa-project.lock.json  maatools.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  test_farm.json
.github/: cliff.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  other_issue.yml
.github/workflows/: check.yml  deploy-docs.yml  format.yml  mirrorchyan_release.yml  mirrorchyan_release_note.yml  optimize-images.yml  release.yml  schema-sync.yml
agent/: agent_runtime.py  bootstrap.py
agent/custom/: __init__.py
agent/custom/action/: __init__.py  ocr_logger.py
agent/custom/recognition/: __init__.py  farm_resources.py  pvp.py
agent/utils/: logger.py  maa_types.py  params.py  pienv.py
config/: maa_pi_config.json
docs/: README.md  index.md
docs/.vitepress/: config.js
docs/.vuepress/: client.ts  config.ts  plume.config.ts
docs/develop/: custom.md  formatting.md  pipeline.md  structure.md
docs/en/: README.md  index.md
docs/zh/: README.md  index.md
resource/announcement/: 1.简介.md  2.常见问题.md  3.错误上报.md
resource/base/: WELCOME.md
skills/maaframework/: skill.md
tasks/: claim_rewards.json  farm_resources.json  pvp.json  startup.json
tools/: build-release.mjs  check-project.mjs  fix-docs-urls.mjs  minify_json.py  ocr_logger_example.json  sync-runtime.mjs  validate_schema.py
tools/schema/: pipeline.schema.json
(+65 files in other folders)
