[project]
name = "maakedr"
version = "0.1.0"
description = "MaaKEDR — MaaFramework KEDR automation project"
requires-python = ">=3.13,<3.14"
dependencies = [
    "loguru",
    "maafw>=5.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".venv", "agent/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E402",   # module level import not at top
    "E501",   # line too long (black handles formatting)
    "SIM102", # nested if
    "SIM108", # ternary operator
    "SIM110", # all()/any()
    "SIM117", # nested with
    "SIM118", # key in dict
    "B007",   # unused loop variable
    "UP047",  # non-pep695 generic function (needs Python 3.12+ syntax)
    "SIM105", # suppressible exception
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
exclude = [".venv", "**/__pycache__"]
extraPaths = ["agent"]
include = ["agent"]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
